Fix : dark mode html blocking

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,14 +32,12 @@ body {
 body[data-theme="dark"] {
   background-color: black;
   color: white;
-  transition: all 0.3s ease-in-out;
   --box-shadow: rgba(255, 255, 255, 0.4) 0px 1px 4px;
 }
 
 body[data-theme="light"] {
   background-color: white;
   color: black;
-  transition: all 0.3s ease-in-out;
 }
 
 a {
